--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
 <html>
-
+<!-- test -->
 	<!-- #BeginTemplate "../web-data/Templates/home.html" -->
 
 		<head>
